--- a/package.json
+++ b/package.json
@@ -43,135 +43,71 @@
     "node": ">=18.x <=20.x"
   },
   "dependencies": {
-    "@dvcorg/gatsby-theme-iterative": "^0.3.8",
-    "@dvcorg/websites-server": "0.1.0",
-    "@hapi/wreck": "^18.0.0",
-    "@octokit/graphql": "^5.0.4",
-    "@reach/portal": "^0.18.0",
-    "@reach/router": "^1.3.4",
-    "@reach/skip-nav": "^0.18.0",
-    "@reach/tooltip": "^0.18.0",
-    "algoliasearch": "^4.14.3",
-    "classnames": "^2.3.2",
-    "color": "^4.2.3",
-    "compression": "^1.7.4",
-    "date-fns": "^2.29.3",
-    "docsearch.js": "^2.6.3",
-    "dotenv": "^16.0.3",
-    "ease-component": "^1.0.0",
-    "express": "^4.18.2",
-    "fs-extra": "^11.1.0",
-    "gatsby": "^5.4.2",
-    "gatsby-plugin-algolia": "^1.0.3",
-    "gatsby-plugin-image": "^3.4.0",
-    "gatsby-plugin-sharp": "^5.4.0",
-    "gatsby-source-rss-feed": "^1.2.2",
-    "github-markdown-css": "^5.1.0",
-    "http-proxy-middleware": "^2.0.6",
-    "iso-url": "^1.2.1",
-    "isomorphic-fetch": "^3.0.0",
-    "js-yaml": "^4.1.0",
-    "lodash": "^4.17.21",
-    "mkdirp": "^2.1.3",
-    "moment": "^2.29.4",
-    "nanoid": "^4.0.0",
-    "perfect-scrollbar": "^1.5.5",
-    "postcss": "^8.4.21",
-    "promise-polyfill": "^8.2.3",
-    "prop-types": "^15.8.1",
-    "raf-polyfill": "^1.0.0",
-    "react": "^18.2.0",
-    "react-collapse": "^5.1.1",
-    "react-collapsible": "^2.10.0",
-    "react-dom": "^18.2.0",
-    "react-focus-lock": "^2.9.2",
-    "react-ga": "^3.3.1",
-    "react-helmet": "^6.1.0",
-    "react-instantsearch-dom": "^6.38.3",
-    "react-popover": "^0.5.10",
-    "react-slick": "^0.29.0",
-    "react-use": "^17.4.0",
-    "rehype-react": "^7.1.2",
-    "remark-preset-lint-recommended": "^6.1.2",
-    "repo-link-check": "^0.14.0",
-    "reset-css": "^5.0.1",
-    "s3-client": "^4.4.2",
-    "scroll": "^3.0.1",
-    "sharp": "^0.31.3",
-    "slick-carousel": "^1.8.1",
-    "title-case": "^3.0.3",
-    "typed.js": "^2.0.12",
-    "unist-util-visit": "^4.1.1",
-    "upath": "^2.0.1",
-    "webpack-filter-warnings-plugin": "^1.2.1"
+    "@dvcorg/gatsby-theme-iterative": "0.3.9",
+    "@dvcorg/websites-server": "0.1.1",
+    "@octokit/request": "8.0.4",
+    "@reach/router": "1.3.4",
+    "classnames": "2.3.2",
+    "date-fns": "2.30.0",
+    "dotenv": "16.3.1",
+    "gatsby": "5.11.0",
+    "gatsby-plugin-catch-links": "5.11.0",
+    "gatsby-plugin-image": "3.11.0",
+    "gatsby-plugin-manifest": "5.11.0",
+    "gatsby-plugin-postcss": "6.11.0",
+    "gatsby-plugin-sharp": "5.11.0",
+    "gatsby-plugin-twitter": "5.11.0",
+    "gatsby-plugin-webpack-bundle-analyser-v2": "1.1.31",
+    "gatsby-source-rss-feed": "1.2.2",
+    "isomorphic-fetch": "3.0.0",
+    "moment": "2.29.4",
+    "nanoid": "4.0.2",
+    "promise-polyfill": "8.3.0",
+    "prop-types": "15.8.1",
+    "raf-polyfill": "1.0.0",
+    "react": "18.2.0",
+    "react-collapse": "5.1.1",
+    "react-dom": "18.2.0",
+    "react-focus-lock": "2.9.5",
+    "react-helmet": "6.1.0",
+    "react-popover": "0.5.10",
+    "react-slick": "0.29.0",
+    "react-use": "17.4.0",
+    "repo-link-check": "0.14.0",
+    "slick-carousel": "1.8.1",
+    "typed.js": "2.0.16",
+    "upath": "2.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@svgr/webpack": "^6.5.1",
-    "@types/classnames": "^2.3.1",
-    "@types/isomorphic-fetch": "^0.0.36",
-    "@types/promise-polyfill": "^6.0.4",
-    "@types/react": "^18.0.27",
-    "@types/react-collapse": "^5.0.1",
-    "@types/react-dom": "^18.0.10",
-    "@types/react-helmet": "^6.1.6",
-    "@types/react-instantsearch-dom": "^6.12.3",
-    "@types/react-popover": "^0.5.5",
-    "@types/react-slick": "^0.23.10",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
-    "autoprefixer": "^10.4.13",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^29.3.1",
-    "babel-plugin-transform-define": "^2.1.0",
-    "babel-plugin-transform-object-assign": "^6.22.0",
-    "eslint": "^8.34.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-json": "^3.1.0",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
-    "gatsby-plugin-catch-links": "^5.4.0",
-    "gatsby-plugin-feed": "^5.4.0",
-    "gatsby-plugin-manifest": "^5.4.0",
-    "gatsby-plugin-postcss": "^6.4.0",
-    "gatsby-plugin-react-helmet": "^6.4.0",
-    "gatsby-plugin-sitemap": "^6.4.0",
-    "gatsby-plugin-svgr": "^3.0.0-beta.0",
-    "gatsby-plugin-twitter": "^5.4.0",
-    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.30",
-    "gatsby-remark-autolink-headers": "^6.4.0",
-    "gatsby-remark-copy-linked-files": "^6.4.0",
-    "gatsby-remark-embed-gist": "^1.2.1",
-    "gatsby-remark-external-links": "^0.0.4",
-    "gatsby-remark-images": "^7.4.0",
-    "gatsby-remark-prismjs": "^7.4.0",
-    "gatsby-remark-responsive-iframe": "^6.4.0",
-    "gatsby-remark-smartypants": "^6.4.0",
-    "gatsby-source-filesystem": "^5.4.0",
-    "gatsby-transformer-remark": "^6.4.0",
-    "gatsby-transformer-sharp": "^5.4.0",
-    "hast-util-select": "^5.0.4",
-    "husky": "^8.0.3",
-    "iframe-resizer-react": "^1.1.0",
-    "jest": "^29.4.2",
-    "lint-staged": "^13.1.1",
-    "postcss-color-mod-function": "^3.0.3",
-    "postcss-custom-media": "^9.0.1",
-    "postcss-custom-properties": "^13.0.0",
-    "postcss-mixins": "^9.0.4",
-    "postcss-nested": "^6.0.0",
-    "prettier": "^2.8.4",
-    "rehype-parse": "^8.0.4",
-    "rehype-stringify": "^9.0.3",
-    "remark": "^14.0.2",
-    "remark-html": "^15.0.1",
-    "remark-parse": "^10.0.1",
-    "stylelint": "^15.1.0",
-    "stylelint-config-standard": "^30.0.1",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.5",
-    "unist-util-remove-position": "^4.0.1"
+    "@babel/core": "7.22.8",
+    "@types/classnames": "2.3.1",
+    "@types/isomorphic-fetch": "0.0.36",
+    "@types/promise-polyfill": "6.0.4",
+    "@types/react": "18.2.14",
+    "@types/react-collapse": "5.0.1",
+    "@types/react-helmet": "6.1.6",
+    "@types/react-popover": "0.5.5",
+    "@types/react-slick": "0.23.10",
+    "@typescript-eslint/eslint-plugin": "5.61.0",
+    "@typescript-eslint/parser": "5.61.0",
+    "babel-jest": "29.6.1",
+    "eslint": "8.44.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-json": "3.1.0",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.32.2",
+    "gatsby-source-filesystem": "5.11.0",
+    "husky": "8.0.3",
+    "iframe-resizer-react": "1.1.0",
+    "jest": "29.6.1",
+    "lint-staged": "13.2.3",
+    "prettier": "3.0.0",
+    "remark": "14.0.3",
+    "remark-html": "15.0.2",
+    "stylelint": "15.10.1",
+    "typescript": "5.1.6",
+    "webpack-filter-warnings-plugin": "1.2.1"
   },
   "cacheDirectories": [
     "node_modules"
